add verification login

--- a/candy/src/lang/en.json
+++ b/candy/src/lang/en.json
@@ -3,8 +3,11 @@
         "Please_sign_in": "Please sign in",
         "Email_address":"Email",
         "Password":"Password",
-        "Remember_me":"Remember me",
-        "Sign_in":"Sign in"
+        "Remember_me":"Remember me?",
+        "Sign_in":"Sign in",
+        "Yes":"Yes",
+        "No":"No"
+
     },
     "navbar":{
         "Sign_out": "Sign out"
